--- a/environment.yaml
+++ b/environment.yaml
@@ -1,113 +1,150 @@
 name: qt
 channels:
   - conda-forge
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/linux-64/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
   - defaults
 dependencies:
-  - asttokens=3.0.0=pyhd8ed1ab_1
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
-  - ca-certificates=2024.9.24=haa95532_0
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - comm=0.2.2=pyhd8ed1ab_0
-  - cpython=3.9.20=py39hd8ed1ab_1
-  - debugpy=1.8.9=py39ha51f57c_0
-  - decorator=5.1.1=pyhd8ed1ab_1
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_0
+  - brotli=1.0.9=h2bbff1b_8
+  - brotli-bin=1.0.9=h2bbff1b_8
+  - brotli-python=1.0.9=py38hd77b12b_8
+  - ca-certificates=2024.11.26=haa95532_0
+  - certifi=2024.8.30=py38haa95532_0
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - colorama=0.4.6=py38haa95532_0
+  - comm=0.2.1=py38haa95532_0
+  - contourpy=1.0.5=py38h59b6b97_0
+  - cryptography=43.0.0=py38h89fc84f_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - debugpy=1.6.7=py38hd77b12b_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - fonttools=4.51.0=py38h2bbff1b_0
   - freetype=2.12.1=ha860e81_0
-  - imageio=2.33.1=py39haa95532_0
-  - importlib-metadata=8.5.0=pyha770c72_1
+  - icc_rt=2022.1.0=h6049295_2
+  - icu=58.2=ha925a31_3
+  - idna=3.7=py38haa95532_0
+  - importlib-metadata=7.0.1=py38haa95532_0
+  - importlib_metadata=7.0.1=hd3eb1b0_0
+  - importlib_resources=6.4.0=py38haa95532_0
   - intel-openmp=2023.1.0=h59b6b97_46320
-  - ipykernel=6.29.5=pyh4bbf305_0
-  - ipython=8.18.1=pyh7428d3b_3
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jpeg=9e=h827c3e9_3
-  - jupyter_client=8.6.3=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=pyh5737063_1
-  - krb5=1.21.3=hdf4eb48_0
+  - ipykernel=6.28.0=py38haa95532_0
+  - ipython=8.12.2=py38haa95532_0
+  - jedi=0.19.1=py38haa95532_0
+  - jpeg=9e=h827c3e9_2
+  - jupyter_client=8.6.0=py38haa95532_0
+  - jupyter_core=5.7.2=py38haa95532_0
+  - kiwisolver=1.4.4=py38hd77b12b_0
+  - krb5=1.20.1=h5b6d351_0
   - lcms2=2.12=h83e58a3_0
   - lerc=3.0=hd77b12b_0
+  - libbrotlicommon=1.0.9=h2bbff1b_8
+  - libbrotlidec=1.0.9=h2bbff1b_8
+  - libbrotlienc=1.0.9=h2bbff1b_8
+  - libclang=14.0.6=default_hb5a9fac_1
+  - libclang13=14.0.6=default_h8e68704_1
   - libdeflate=1.17=h2bbff1b_1
+  - libffi=3.4.4=hd77b12b_1
   - libpng=1.6.39=h8cc25b3_0
-  - libsodium=1.0.20=hc70643c_0
+  - libpq=12.17=h906ac69_0
+  - libsodium=1.0.18=h62dcd97_0
   - libtiff=4.5.1=hd77b12b_0
-  - libwebp-base=1.3.2=h3d04722_1
+  - libusb=1.0.27=hcfcfb64_100
+  - libwebp-base=1.3.2=h2bbff1b_0
+  - llvmlite=0.41.0=py38hf2fb9eb_0
   - lz4-c=1.9.4=h2bbff1b_1
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - matplotlib=3.7.2=py38haa95532_0
+  - matplotlib-base=3.7.2=py38h4ed8f06_0
+  - matplotlib-inline=0.1.6=py38haa95532_0
   - mkl=2023.1.0=h6b88ed4_46358
-  - mkl-service=2.4.0=py39h2bbff1b_1
-  - mkl_fft=1.3.11=py39h827c3e9_0
-  - mkl_random=1.2.8=py39hc64d2fc_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openjpeg=2.5.2=hae555c5_0
-  - openssl=3.4.0=h2466b09_0
-  - packaging=24.2=pyhd8ed1ab_2
-  - parso=0.8.4=pyhd8ed1ab_1
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.4.0=py39h827c3e9_0
-  - pip=24.2=py39haa95532_0
-  - platformdirs=4.3.6=pyhd8ed1ab_1
-  - prompt-toolkit=3.0.48=pyha770c72_0
-  - psutil=6.1.0=py39ha55e580_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pygments=2.18.0=pyhd8ed1ab_1
-  - python=3.9.20=h8205438_1
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
-  - python_abi=3.9=2_cp39
-  - pyzmq=26.2.0=py39h03e5c00_3
-  - setuptools=75.1.0=py39haa95532_0
-  - six=1.16.0=pyhd8ed1ab_1
+  - mkl-service=2.4.0=py38h2bbff1b_1
+  - mkl_fft=1.3.8=py38h2bbff1b_0
+  - mkl_random=1.2.4=py38h59b6b97_0
+  - nest-asyncio=1.6.0=py38haa95532_0
+  - numba=0.58.1=py38hd77b12b_0
+  - numpy=1.24.3=py38h79a8e48_1
+  - numpy-base=1.24.3=py38h8a87ada_1
+  - openjpeg=2.4.0=h4afccc4_2
+  - openssl=3.3.1=h2466b09_2
+  - packaging=24.1=py38haa95532_0
+  - pandas=2.0.3=py38hf08cf0d_1
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=10.4.0=py38h827c3e9_0
+  - pip=24.0=py38haa95532_0
+  - platformdirs=3.10.0=py38haa95532_0
+  - plumbum=1.9.0=pyhd8ed1ab_0
+  - ply=3.11=py38_0
+  - pooch=1.7.0=py38haa95532_0
+  - prompt-toolkit=3.0.43=py38haa95532_0
+  - psutil=5.9.0=py38h2bbff1b_0
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pygments=2.15.1=py38haa95532_1
+  - pylablib=1.4.3=py38h4cb3324_0
+  - pynacl=1.5.0=py38h8cc25b3_0
+  - pyparsing=3.0.9=py38haa95532_0
+  - pyqt=5.15.10=py38hd77b12b_0
+  - pyqt5-sip=12.13.0=py38h2bbff1b_0
+  - pyqtgraph=0.13.1=py38haa95532_0
+  - pyserial=3.5=py38haa95532_0
+  - pysocks=1.7.1=py38haa95532_0
+  - python=3.8.19=h1aa4202_0
+  - python-dateutil=2.9.0post0=py38haa95532_2
+  - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyusb=1.2.1=pyhd8ed1ab_0
+  - pyvisa=1.14.1=pyhd8ed1ab_0
+  - pywin32=305=py38h2bbff1b_0
+  - pywin32-on-windows=0.1.0=pyh07e9846_2
+  - pyzmq=25.1.2=py38hd77b12b_0
+  - qt-main=5.15.2=h879a1e9_9
+  - requests=2.32.3=py38haa95532_0
+  - rpyc=5.3.0=pyhd8ed1ab_0
+  - scipy=1.10.1=py38hdcfc7df_1
+  - setuptools=69.5.1=py38haa95532_0
+  - sip=6.7.12=py38hd77b12b_0
+  - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.45.3=h2bbff1b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
   - tbb=2021.8.0=h59b6b97_0
-  - tornado=6.4.2=py39ha55e580_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_1
-  - ucrt=10.0.22621.0=h57928b3_1
-  - vc=14.40=h2eaa2aa_1
-  - vc14_runtime=14.42.34433=he29a5d6_23
-  - vs2015_runtime=14.42.34433=hdffcdeb_23
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - wheel=0.44.0=py39haa95532_0
+  - tomli=2.0.1=py38haa95532_0
+  - tornado=6.4.1=py38h827c3e9_0
+  - traitlets=5.14.3=py38haa95532_0
+  - typing_extensions=4.11.0=py38haa95532_0
+  - ucrt=10.0.22621.0=h57928b3_0
+  - unicodedata2=15.1.0=py38h2bbff1b_0
+  - urllib3=2.2.3=py38haa95532_0
+  - vc=14.2=h2eaa2aa_4
+  - vc14_runtime=14.40.33810=ha82c5b3_20
+  - vs2015_runtime=14.40.33810=h3bf8584_20
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.43.0=py38haa95532_0
+  - win_inet_pton=1.1.0=py38haa95532_0
   - xz=5.4.6=h8cc25b3_1
-  - zeromq=4.3.5=ha9f60a1_7
-  - zipp=3.21.0=pyhd8ed1ab_1
+  - zeromq=4.3.5=hd77b12b_0
+  - zipp=3.17.0=py38haa95532_0
   - zlib=1.2.13=h8cc25b3_1
-  - zstd=1.5.6=h8880b57_0
+  - zstd=1.5.5=hd43e919_2
   - pip:
       - bcrypt==4.2.0
-      - cffi==1.17.1
-      - click==8.1.7
-      - cryptography==43.0.3
+      - cffi==1.16.0
       - enum-compat==0.0.3
-      - llvmlite==0.43.0
-      - newportxps==0.9
-      - numba==0.60.0
-      - numpy==2.0.2
+      - future==1.0.0
+      - imagingcontrol4==1.2.0.2954
+      - iso8601==2.1.0
+      - newportxps==0.3.0
       - opencv-python==4.10.0.84
-      - pandas==2.2.3
-      - paramiko==3.5.0
-      - plumbum==1.9.0
+      - paramiko==3.4.0
       - pycparser==2.22
-      - pyft232==0.12
-      - pylablib==1.4.3
-      - pynacl==1.5.0
-      - pypylon==4.1.0
-      - pyqt5==5.15.9
-      - pyqt5-plugins==5.15.9.2.3
-      - pyqt5-qt5==5.15.2
-      - pyqt5-sip==12.15.0
-      - pyqt5-tools==5.15.9.3.3
-      - pyqtgraph==0.13.7
-      - pyserial==3.5
       - pysftp==0.2.9
-      - python-dotenv==1.0.1
-      - pytz==2024.2
       - pyueye==4.96.952
-      - pyusb==1.2.1
-      - pyvisa==1.14.1
-      - pywin32==308
-      - qt5-applications==5.15.2.2.3
-      - qt5-tools==5.15.2.1.3
-      - rpyc==6.0.1
-      - scipy==1.13.1
-      - tzdata==2024.2
+      - pyyaml==6.0.1
+      - serial==0.0.97
+prefix: C:\ProgramData\miniconda3\envs\qt
