--- a/environment.yaml
+++ b/environment.yaml
@@ -1,139 +1,141 @@
 name: qt
 channels:
-  - conda-forge
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/linux-64/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
+  - conda-forge
   - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
+  - https://repo.anaconda.com/pkgs/msys2
 dependencies:
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - brotli=1.0.9=h2bbff1b_8
-  - brotli-bin=1.0.9=h2bbff1b_8
-  - brotli-python=1.0.9=py38hd77b12b_8
-  - ca-certificates=2024.11.26=haa95532_0
-  - certifi=2024.8.30=py38haa95532_0
-  - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - colorama=0.4.6=py38haa95532_0
-  - comm=0.2.1=py38haa95532_0
-  - contourpy=1.0.5=py38h59b6b97_0
-  - cryptography=43.0.0=py38h89fc84f_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - debugpy=1.6.7=py38hd77b12b_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - fonttools=4.51.0=py38h2bbff1b_0
-  - freetype=2.12.1=ha860e81_0
-  - icc_rt=2022.1.0=h6049295_2
-  - icu=58.2=ha925a31_3
-  - idna=3.7=py38haa95532_0
-  - importlib-metadata=7.0.1=py38haa95532_0
-  - importlib_metadata=7.0.1=hd3eb1b0_0
-  - importlib_resources=6.4.0=py38haa95532_0
-  - intel-openmp=2023.1.0=h59b6b97_46320
-  - ipykernel=6.28.0=py38haa95532_0
-  - ipython=8.12.2=py38haa95532_0
-  - jedi=0.19.1=py38haa95532_0
-  - jpeg=9e=h827c3e9_2
-  - jupyter_client=8.6.0=py38haa95532_0
-  - jupyter_core=5.7.2=py38haa95532_0
-  - kiwisolver=1.4.4=py38hd77b12b_0
-  - krb5=1.20.1=h5b6d351_0
-  - lcms2=2.12=h83e58a3_0
-  - lerc=3.0=hd77b12b_0
-  - libbrotlicommon=1.0.9=h2bbff1b_8
-  - libbrotlidec=1.0.9=h2bbff1b_8
-  - libbrotlienc=1.0.9=h2bbff1b_8
-  - libclang=14.0.6=default_hb5a9fac_1
-  - libclang13=14.0.6=default_h8e68704_1
-  - libdeflate=1.17=h2bbff1b_1
-  - libffi=3.4.4=hd77b12b_1
-  - libpng=1.6.39=h8cc25b3_0
-  - libpq=12.17=h906ac69_0
-  - libsodium=1.0.18=h62dcd97_0
-  - libtiff=4.5.1=hd77b12b_0
-  - libusb=1.0.27=hcfcfb64_100
-  - libwebp-base=1.3.2=h2bbff1b_0
-  - llvmlite=0.41.0=py38hf2fb9eb_0
-  - lz4-c=1.9.4=h2bbff1b_1
-  - matplotlib=3.7.2=py38haa95532_0
-  - matplotlib-base=3.7.2=py38h4ed8f06_0
-  - matplotlib-inline=0.1.6=py38haa95532_0
-  - mkl=2023.1.0=h6b88ed4_46358
-  - mkl-service=2.4.0=py38h2bbff1b_1
-  - mkl_fft=1.3.8=py38h2bbff1b_0
-  - mkl_random=1.2.4=py38h59b6b97_0
-  - nest-asyncio=1.6.0=py38haa95532_0
-  - numba=0.58.1=py38hd77b12b_0
-  - numpy=1.24.3=py38h79a8e48_1
-  - numpy-base=1.24.3=py38h8a87ada_1
-  - openjpeg=2.4.0=h4afccc4_2
-  - openssl=3.3.1=h2466b09_2
-  - packaging=24.1=py38haa95532_0
-  - pandas=2.0.3=py38hf08cf0d_1
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=10.4.0=py38h827c3e9_0
-  - pip=24.0=py38haa95532_0
-  - platformdirs=3.10.0=py38haa95532_0
-  - plumbum=1.9.0=pyhd8ed1ab_0
-  - ply=3.11=py38_0
-  - pooch=1.7.0=py38haa95532_0
-  - prompt-toolkit=3.0.43=py38haa95532_0
-  - psutil=5.9.0=py38h2bbff1b_0
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pygments=2.15.1=py38haa95532_1
-  - pylablib=1.4.3=py38h4cb3324_0
-  - pynacl=1.5.0=py38h8cc25b3_0
-  - pyparsing=3.0.9=py38haa95532_0
-  - pyqt=5.15.10=py38hd77b12b_0
-  - pyqt5-sip=12.13.0=py38h2bbff1b_0
-  - pyqtgraph=0.13.1=py38haa95532_0
-  - pyserial=3.5=py38haa95532_0
-  - pysocks=1.7.1=py38haa95532_0
-  - python=3.8.19=h1aa4202_0
-  - python-dateutil=2.9.0post0=py38haa95532_2
-  - python-tzdata=2024.1=pyhd8ed1ab_0
-  - python_abi=3.8=2_cp38
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pyusb=1.2.1=pyhd8ed1ab_0
-  - pyvisa=1.14.1=pyhd8ed1ab_0
-  - pywin32=305=py38h2bbff1b_0
-  - pywin32-on-windows=0.1.0=pyh07e9846_2
-  - pyzmq=25.1.2=py38hd77b12b_0
-  - qt-main=5.15.2=h879a1e9_9
-  - requests=2.32.3=py38haa95532_0
-  - rpyc=5.3.0=pyhd8ed1ab_0
-  - scipy=1.10.1=py38hdcfc7df_1
-  - setuptools=69.5.1=py38haa95532_0
-  - sip=6.7.12=py38hd77b12b_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.45.3=h2bbff1b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=h59b6b97_0
-  - tomli=2.0.1=py38haa95532_0
-  - tornado=6.4.1=py38h827c3e9_0
-  - traitlets=5.14.3=py38haa95532_0
-  - typing_extensions=4.11.0=py38haa95532_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - unicodedata2=15.1.0=py38h2bbff1b_0
-  - urllib3=2.2.3=py38haa95532_0
-  - vc=14.2=h2eaa2aa_4
-  - vc14_runtime=14.40.33810=ha82c5b3_20
-  - vs2015_runtime=14.40.33810=h3bf8584_20
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.43.0=py38haa95532_0
-  - win_inet_pton=1.1.0=py38haa95532_0
-  - xz=5.4.6=h8cc25b3_1
-  - zeromq=4.3.5=hd77b12b_0
-  - zipp=3.17.0=py38haa95532_0
-  - zlib=1.2.13=h8cc25b3_1
-  - zstd=1.5.5=hd43e919_2
+  - asttokens=2.0.5
+  - backcall=0.2.0
+  - bcrypt=4.2.0
+  - blas=1.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotli-python=1.0.9
+  - ca-certificates=2025.11.4
+  - certifi=2024.8.30
+  - charset-normalizer=3.3.2
+  - colorama=0.4.6
+  - comm=0.2.1
+  - contourpy=1.0.5
+  - cryptography=43.0.0
+  - cycler=0.11.0
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - executing=0.8.3
+  - fonttools=4.51.0
+  - freetype=2.12.1
+  - h5py=3.11.0
+  - hdf5=1.12.1
+  - icc_rt=2022.1.0
+  - icu=58.2
+  - idna=3.7
+  - importlib-metadata=7.0.1
+  - importlib_metadata=7.0.1
+  - importlib_resources=6.4.0
+  - intel-openmp=2023.1.0
+  - ipykernel=6.28.0
+  - ipython=8.12.2
+  - jedi=0.19.1
+  - jpeg=9e
+  - jupyter_client=8.6.0
+  - jupyter_core=5.7.2
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lcms2=2.12
+  - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libclang=14.0.6
+  - libclang13=14.0.6
+  - libdeflate=1.17
+  - libffi=3.4.4
+  - libpng=1.6.39
+  - libpq=12.17
+  - libsodium=1.0.18
+  - libtiff=4.5.1
+  - libusb=1.0.27
+  - libwebp-base=1.3.2
+  - llvmlite=0.41.0
+  - lz4-c=1.9.4
+  - matplotlib=3.7.2
+  - matplotlib-base=3.7.2
+  - matplotlib-inline=0.1.6
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.8
+  - mkl_random=1.2.4
+  - nest-asyncio=1.6.0
+  - numba=0.58.1
+  - numpy=1.24.3
+  - numpy-base=1.24.3
+  - openjpeg=2.4.0
+  - openssl=3.3.1
+  - packaging=24.1
+  - pandas=2.0.3
+  - parso=0.8.3
+  - pickleshare=0.7.5
+  - pillow=10.4.0
+  - pip=24.0
+  - platformdirs=3.10.0
+  - plumbum=1.9.0
+  - ply=3.11
+  - pooch=1.7.0
+  - prompt-toolkit=3.0.43
+  - psutil=5.9.0
+  - pure_eval=0.2.2
+  - pycparser=2.22
+  - pygments=2.15.1
+  - pylablib=1.4.3
+  - pynacl=1.5.0
+  - pyparsing=3.0.9
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
+  - pyqtgraph=0.13.1
+  - pyserial=3.5
+  - pysocks=1.7.1
+  - python=3.8.19
+  - python-dateutil=2.9.0post0
+  - python-tzdata=2024.1
+  - python_abi=3.8
+  - pytz=2024.1
+  - pyusb=1.2.1
+  - pyvisa=1.14.1
+  - pywin32=305
+  - pywin32-on-windows=0.1.0
+  - pyzmq=25.1.2
+  - qt-main=5.15.2
+  - requests=2.32.3
+  - rpyc=5.3.0
+  - scipy=1.10.1
+  - setuptools=69.5.1
+  - sip=6.7.12
+  - six=1.16.0
+  - sqlite=3.45.3
+  - stack_data=0.2.0
+  - tbb=2021.8.0
+  - tomli=2.0.1
+  - tornado=6.4.1
+  - traitlets=5.14.3
+  - typing_extensions=4.11.0
+  - ucrt=10.0.22621.0
+  - unicodedata2=15.1.0
+  - urllib3=2.2.3
+  - vc=14.2
+  - vc14_runtime=14.40.33810
+  - vs2015_runtime=14.40.33810
+  - wcwidth=0.2.5
+  - wheel=0.43.0
+  - win_inet_pton=1.1.0
+  - xz=5.4.6
+  - zeromq=4.3.5
+  - zipp=3.17.0
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
-      - bcrypt==4.2.0
       - cffi==1.16.0
       - enum-compat==0.0.3
       - future==1.0.0
@@ -142,9 +144,8 @@ dependencies:
       - newportxps==0.3.0
       - opencv-python==4.10.0.84
       - paramiko==3.4.0
-      - pycparser==2.22
       - pysftp==0.2.9
       - pyueye==4.96.952
       - pyyaml==6.0.1
       - serial==0.0.97
-prefix: C:\ProgramData\miniconda3\envs\qt
+
